# freeq-server

./: Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
src/freeqserver/: freeqserver.py
