[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freeq-server"
version = "0.0.19"
description = "Zero-setup queue with e2e encryption for free in 1 line of code. Server part"
readme = "README.md"
authors = [
    { name = "Viktor Hronec", email = "zamr666@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["queue", "easy", "message queue", "zero-setup"]
dependencies = [
    "annotated-types==0.6.0",
    "anyio==3.7.1",
    "certifi==2023.11.17",
    "click==8.1.7",
    "dnspython==2.4.2",
    "email-validator==2.1.0.post1",
    "fastapi[all]==0.104.1",
    "gunicorn==21.2.0",
    "h11==0.14.0",
    "hiredis==2.2.3",
    "httpcore==1.0.2",
    "httptools==0.6.1",
    "httpx==0.25.2",
    "idna==3.6",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "orjson==3.9.10",
    "packaging==23.2",
    "pydantic==2.5.2",
    "pydantic-core==2.14.5",
    "pydantic-extra-types==2.1.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.1",
    "redis[hiredis]==5.0.1",
    "sniffio==1.3.0",
    "starlette==0.27.0",
    "typing-extensions==4.9.0",
    "ujson==5.8.0",
    "uvicorn[standard]==0.24.0.post1",
    "uvloop==0.19.0",
    "watchfiles==0.21.0",
    "websockets==12.0"
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/hronecviktor/freeq-server"
"Bug Tracker" = "https://github.com/hronecviktor/freeq-server/issues"
